--- a/style.css
+++ b/style.css
@@ -1,8 +1,45 @@
 body {
-    background-color: lightblue;
-  }
+    width: 70%;
+    margin: 0 auto; 
+    background-color: #0f0f0f;
+    color: #f3f3f3;
+}
+
   
-  h1 {
-    color: navy;
-    margin-left: 20px;
+h1 {
+    font-family: Arial, sans-serif;
+    color: #81c784;
+    width: 100%;
+    min-height: 200%;
+}
+
+p1 {
+    display: flex;
+    //text-align: center;
+    position: relative;
+    max-width: 40%;
+
+    color: #81c784;
+
+}
+
+.right {
+    position: absolute;
+    right: 0px;
+    width: 300px;
+    //border: 3px solid #73AD21;
+    padding: 10px;
+}
+
+.center {
+    margin: auto;
+    width: 80%;
+    //border: 3px solid green;
+    padding: 10px;
+}
+
+.header {
+    background-color: #F1F1F1;
+    text-align: center;
+    padding: 20px;
   }
