--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
-    width: 70%;
-    margin: 0 auto; 
-    background-color: #0f0f0f;
-    color: #f3f3f3;
-}
+    //width: 70%;
+    font-family: Reddit Mono; // change font here
+    //font-family: "Lato", sans-serif; // change font here
 
+    margin: 0 auto; 
+    background-color: #FFFFFF;
+    color: #212121;
+}
   
 h1 {
-    font-family: Arial, sans-serif;
-    color: #81c784;
+    color: #009688;
     width: 100%;
     min-height: 200%;
 }
@@ -16,30 +17,44 @@ h1 {
 p1 {
     display: flex;
     //text-align: center;
-    position: relative;
-    max-width: 40%;
-
-    color: #81c784;
+    //position: relative;
+    //max-width: 40%;
+    width: 100%;
+    //min-height: 100%;
 
 }
 
-.right {
+/*.right {
     position: absolute;
     right: 0px;
     width: 300px;
     //border: 3px solid #73AD21;
     padding: 10px;
-}
+}*/
 
 .center {
     margin: auto;
     width: 80%;
     //border: 3px solid green;
-    padding: 10px;
+    padding: 1rem;
+}
+
+.name {
+    margin: auto;
+    width: 80%;
+    //border: 3px solid green;
+    padding: 1rem;
+    font-weight: 700;
+
 }
 
 .header {
-    background-color: #F1F1F1;
+    display: flex;
+    background-color: #00796B;
     text-align: center;
-    padding: 20px;
+    padding: 2rem;
   }
+
+.icon {
+    fill: #FFC107;
+}
